--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -20,6 +20,10 @@
       "cheat-sheet": {
         "title": "Cheat Sheet"
       },
+      "configuration": {
+        "title": "Configuration Files",
+        "sidebar_label": "Configuration Files"
+      },
       "faq": {
         "title": "Frequently Asked Questions",
         "sidebar_label": "FAQ"
